# ROTF3

./: README.md
rotf3/: CMakeLists.txt  package.xml
rotf3/launch/: get_odom.launch  mapping.launch  move_base.launch  navigation_rotf3.launch  serial_node_c.launch  serial_node_co.launch  serial_node_o.launch  sim_rotf3.launch  teleop.launch  teleop_rotf3.launch
rotf3/launch/include/: description.launch.xml
rotf3/maps/: hotel.pgm  hotel.yaml  map.pgm
rotf3/rviz/: default.rviz  hotel.rviz  world.rviz
rotf3/scripts/: get_odom.py  get_stl_data.py  loop_cmd_vel.py  pid.py  pseudo_encoder.py  read_from_arduino.py  target_pub.py  teleop_key.py  teleop_rotf3.py
rotf3/src/: omni_controller.cpp  omni_controller.h
rotf3/urdf/: main.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro
rotf3/worlds/: maze_modified.world
