<?xml version="1.0"?>
<package format="2">
  <name>rotf3</name>
  <version>0.0.0</version>
  <description>The rotf3 package</description>
  <maintainer email="rajeev-gupta@ph.iitr.ac.in">rajeev-gupta</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!--from turtlebot3_simulation/package.xml -->
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <exec_depend>gazebo</exec_depend>

  <!-- turtlebot3_navigation/package.xml  -->
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
